채용공고 수정

--- a/jobopening/index.html
+++ b/jobopening/index.html
@@ -73,43 +73,57 @@
                <div class="rec clearfix">
                     <h2><i class="i-my"></i>진행중인 채용 공고</h2>
                             <div class="tbBox" style="width:100%">
-                                <h3>< WEB 개발자, SW architect ></h3>
+                                <h3>< WEB 개발자, IT전문가(정보시스템 SW,인프라 유지보수) ></h3>
                                 <p class="note">*채용 마감 기한 : 채용시까지</p>
                                 <table class="tb1">
                                     <tr>
                                         <th>경력</th>
-                                        <td>3년 이상</td>
+                                        <td>ㆍ 3년 이상</td>
                                     </tr>
                                     <tr>
                                         <th>학력</th>
-                                        <td>무관/정보처리기사(우대)</td>
+                                        <td>ㆍ 무관/정보처리기사(우대)</td>
                                     </tr>
                                     <tr>
                                         <th>근무 장소</th>
-                                        <td>재택 근무</td>
+                                        <td>ㆍ 재택 근무</td>
                                     </tr>
                                     <tr>
                                         <th>면접 방법</th>
-                                        <td>화상 인터뷰 (Zoom)</td>
+                                        <td>ㆍ 화상 인터뷰 (Zoom)</td>
                                     </tr>
                                     <tr>
                                         <th>접수 기간</th>
-                                        <td>~ 채용시까지</td>
+                                        <td>ㆍ 채용시까지</td>
                                     </tr>
                                     <tr>
                                         <th>직무 내용</th>
                                         <td>
-                                            JSP / Spring Boot [신규 개발 / 기능 수정] <br>
-                                            PHP / Pdo <br>신규 개발 / 기능 수정
+                                            <h4>WEB 개발자</h4>
+                                            <p style="margin-bottom: 16px">
+                                                ㆍ JSP / Spring Boot [신규 개발 / 기능 수정] <br>
+                                                ㆍ PHP / Pdo <br>
+                                                ㆍ 신규 개발 / 기능 수정
+                                            </p>
+                                            <h4>IT전문가(IT전문가)</h4>
+                                            <p>
+                                                ㆍ WEB / WAS / DBMS 장애예방점검<br>
+                                                ㆍ 상용SW 서비스요청 접수 및 처리<br>
+                                                ㆍ 정보시스템 보안취약점 점검 및 조치<br>
+                                                ㆍ 시군구 자치단체, 시도교육청 등 분기 방문 점검
+                                            </p>
                                         </td>
                                     </tr>
                                     <tr>
                                         <th>채용 우대사항</th>
-                                        <td>초대졸 이상, 정보처리산업기사 / 정보처리기사 보유</td>
+                                        <td>
+                                            ㆍ 초대졸 이상, 정보처리산업기사 / 정보처리기사 / 네트워크전문가<br>
+                                            ㆍ SW아키텍트, 인프라 유지보수 공공사업 유경험자 우대
+                                        </td>
                                     </tr>
                                     <tr>
                                         <th>기타</th>
-                                        <td>상주 프로젝트 투입 시 PC 및 업무 집기 일체 공급(종료 후 반납)</td>
+                                        <td>ㆍ 상주 프로젝트 투입 시 PC 및 업무 집기 일체 공급(종료 후 반납)</td>
                                     </tr>
                                 </table>
                                 <h3 class="mt50">채용 마감일</h3>
@@ -129,12 +143,12 @@
                     </li>
                     <li>
                         <h3>근무시간</h3>
-                        <p>주 <span class="bold bignumber">40</span>시간 이하</p>
+                        <p>주 <span class="bold bignumber">52</span>시간 이하</p>
                         <p>재택, 탄력근무제</p>
                     </li>
                    <li>
                         <h3>근무형태</h3>
-                        <p>계약직 : 6개월 단위<br>정규직으로 전환 가능
+                        <p>정규직
                     </li>
                    <li>
                         <h3>복리후생 <span>(정규직)</span></h3>
@@ -165,8 +179,8 @@
                          <h3>사람인 입사지원</h3>
                          <ul class="sub-list">
                              <li>
-                                 <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?isMypage=no&rec_idx=43454958&view_type=list" class="saramin_link mr5">웹개발자 입사지원</a>
-                                 <a href="https://www.saramin.co.kr/zf_user/jobs/relay/view?rec_idx=43408697&view_type=list" class="saramin_link">IT전문가 입사지원</a>
+                                 <a href="#none" class="saramin_link mr5" onclick="OnClick()">웹개발자 입사지원</a>
+                                 <a href="https://www.saramin.co.kr/zf_user/jobs/view?rec_idx=44827975&view_type=etc" target=”_blank” class="saramin_link">IT전문가 입사지원</a>
                             </li>
                          </ul>
                      </li>
@@ -191,8 +205,8 @@
                     <li>
                         <h3>찾아오는 길</h3>
                         <ul class="sub-list">
-                            <li>	서울특별시 마포구 상암동 1601 KGIT센터</li>
-                             <li><br>수색역 1번 출구 도보 17분</li>
+                            <li>	경기 고양시 덕양구 원흥동 704 고양 아크비즈 지식산업센터 623호</li>
+                             <li><br>원흥역 3번 출구 정류장 버스(046,075B) 12분</li>
                              <li><div class="map"></div></li>
                          </ul>
                     </li>
@@ -205,6 +219,9 @@
     $('.fixed-top-menu').on('click',function(){
         location.href='/';
     });
+    function OnClick()  {
+        alert('모집중인 공고가 없습니다.');
+    }
    </script>
 </body>
 </html>
