--- a/jobs/soft/index.html
+++ b/jobs/soft/index.html
@@ -203,7 +203,7 @@
                                 </select>
                             </li>
                             <li>
-                                <select name="" id="">
+                                <select name="" >
                                     <option value="">바로가기 사이트1</option>
                                     <option value="">바로가기 사이트2</option>
                                 </select>
